name:          exceptions
category:      Control, Exceptions, Monad
version:       0.3.3
cabal-version: >= 1.8
license:       OtherLicense
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/exceptions/
bug-reports:   http://github.com/ekmett/exceptions/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
               Copyright (C) 2012 Google Inc.
build-type:    Simple
tested-with:   GHC == 7.4.1, GHC == 7.6.1
synopsis:      Extensible optionally-pure exceptions
description:   Extensible optionally-pure exceptions

extra-source-files:
  .travis.yml
  .ghci
  .gitignore
  .vim.custom
  travis/cabal-apt-install
  travis/config
  AUTHORS.markdown
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/exceptions.git

library
  build-depends:
    base                       >= 4.3      && < 5,
    transformers               >= 0.2      && < 0.4,
    mtl                        >= 2.0      && < 2.2

  exposed-modules:
    Control.Monad.Catch
    Control.Monad.Catch.Pure

  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src

test-suite exceptions-tests
  main-is: Tests.hs
  other-modules: Control.Monad.Catch.Tests
  hs-source-dirs: src, tests
  ghc-options: -Wall -fwarn-tabs
  type: exitcode-stdio-1.0
  build-depends:
    base                       >= 4.3      && < 5,
    transformers               >= 0.2      && < 0.4,
    mtl                        >= 2.0      && < 2.2,

    test-framework             >= 0.8      && < 0.9,
    test-framework-quickcheck2 >= 0.3      && < 0.4,
    QuickCheck                 >= 2.5      && < 2.7
