name:          exceptions
category:      Control, Exceptions, Monad
version:       0.8.3
cabal-version: >= 1.8
license:       BSD3
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/exceptions/
bug-reports:   http://github.com/ekmett/exceptions/issues
copyright:     Copyright (C) 2013-2015 Edward A. Kmett
               Copyright (C) 2012 Google Inc.
build-type:    Simple
tested-with:   GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.0.20150307
synopsis:      Extensible optionally-pure exceptions
description:   Extensible optionally-pure exceptions

extra-source-files:
  .travis.yml
  .ghci
  .gitignore
  .vim.custom
  travis/cabal-apt-install
  travis/config
  AUTHORS.markdown
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/exceptions.git

library
  build-depends:
    base                       >= 4.3      && < 5,
    stm                        >= 2.2      && < 3,
    template-haskell           >= 2.2      && < 2.12,
    transformers               >= 0.2      && < 0.6,
    transformers-compat        >= 0.3      && < 0.6,
    mtl                        >= 2.0      && < 2.3

  exposed-modules:
    Control.Monad.Catch
    Control.Monad.Catch.Pure

  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src

test-suite exceptions-tests
  main-is: Tests.hs
  other-modules: Control.Monad.Catch.Tests
  hs-source-dirs: src, tests
  ghc-options: -Wall -fwarn-tabs
  type: exitcode-stdio-1.0
  build-depends:
    base,
    stm,
    template-haskell,
    transformers,
    transformers-compat,
    mtl,
    test-framework             >= 0.8      && < 0.9,
    test-framework-quickcheck2 >= 0.3      && < 0.4,
    QuickCheck                 >= 2.5      && < 2.10
